--- a/04-js/index.html
+++ b/04-js/index.html
@@ -7,5 +7,6 @@
 <body>
   <script src="intro.js"></script>
   <script src="functions.js"></script>
+  <script src="sol.js"></script>
 </body>
 </html>
